# singletask

./: .gitignore  Cargo.toml  README.md  Secrets.dev.toml  Shuttle.toml  lcov.info
scripts/: update_test.sh
src/: error.rs  index.rs  main.rs  process.rs  request.rs  responses.rs  shortcuts.rs  tasks.rs  time.rs  unsplash.rs  user.rs
src/views/: index.rs  mod.rs  process.rs  shortcuts.rs
templates/: base.css  base.html  base.js  index.html  index_with_no_task.html  index_with_task.html  index_with_token.html  nav.html  process_with_no_task.html  process_with_task.html  shortcuts.html
tests/: Sync.json  Tasks.json
