[package]
name = "singletask"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.140"
shuttle = "0.8.0"
shuttle-runtime = "0.49.0"
shuttle-axum = "0.49.0"
askama_axum = "0.4.0"
askama = {version = "0.12.1", features = ["markdown"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
tower-http = { version = "0.6.1", features = ["trace"] }
urlencoding = "2.1.3"
chrono = "0.4.40"
chrono-tz = "0.10.1"
reqwest = { version = "0.12", features = ["json"] }
serde_repr = "0.1.20"
colored = "3"
uuid = { version = "1.15", features = ["serde", "v4"] }
regex = "1.11.1"
echodb = "0.7.0"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
futures = "0.3.31"

[dev-dependencies]
cargo-watch = "8.5.3"
axum-test = "16.4.0"
