[package]
name = "singletask"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum and Askama
axum = "0.8.4"
askama = "0.14.0"
# Shuttle
shuttle = "0.8.0"
shuttle-runtime = "0.53.0"
shuttle-axum = "0.54.0"
# Serde
serde = {version = "1", features = ["derive"]}
serde_repr = "0.1.20"
serde_json = "1.0"
# Other
chrono = "0.4.41"
chrono-tz = "0.10.3"
colored = "3"
comrak = "0.39"
echodb = "0.8.0"
futures = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
tokio = {version = "1", features = ["full"]}
tower-http = { version = "0.6.3", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
urlencoding = "2.1.3"
uuid = { version = "1.16", features = ["serde", "v4"] }

[dev-dependencies]
cargo-watch = "8.5.3"
axum-test = "17.3.0"
